--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <h3>11:30</h3>
         </div>
     </section>
-    <footer id="social">
-        <ul>
+    <footer>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
